5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1729_2527.log
== TEST (2019-05-13 11:25:50) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		divisores = divisores + 1
	cont = cont - 1

if(divisores < 2):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 11:27:25) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		divisores = divisores + 1
	cont = cont - 1

if(divisores < 2):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:21:24) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:21:42) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:23) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:25:00) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont >= 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(numero % cont == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:25:30) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:14) 
-- CODE:
numero = int(input("digite numero: "))

divisores = 0
cont = numero - 1

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:35:55) 
-- CODE:
numero = int(input("digite numero: "))

cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:36:07) 
-- CODE:
numero = int(input("digite numero: "))

cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.161479
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
496
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
8128
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
20
PERFEITO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:37:47) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		if (numero != perfeito):
			print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:38:06) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		if (numero != perfeito):
			print(numero // cont)
			perfeito = numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:41:03) 
-- CODE:
numero = int(input("digite numero: "))

cont1 = 0
cont2 = numero

while(cont2 > 0):
	if(numero % cont2 == 0):
		if(cont1 < numero)
			print(numero // cont2)
			perfeito = numero // cont2
	cont1	= cont1 + 1
	cont2 = cont2 - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- ERROR:
File "XXXX", line 8
    if(cont1 < numero)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:41:15) 
-- CODE:
numero = int(input("digite numero: "))

cont1 = 0
cont2 = numero

while(cont2 > 0):
	if(numero % cont2 == 0):
		if(cont1 < numero):
			print(numero // cont2)
			perfeito = numero // cont2
	cont1	= cont1 + 1
	cont2 = cont2 - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:43:24) 
-- CODE:
numero = int(input("digite numero: "))

cont1 = 0
cont2 = numero

while(cont2 > 0):
	if(numero % cont2 == 0):
		if(cont1 < numero):
			print(numero // cont2)
			perfeito = numero // cont2
	cont1	= cont1 + 1
	cont2 = cont2 - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:44:38) 
-- CODE:
numero = int(input("digite numero: "))


cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont2 = cont2 - 1
print(perfeito)
if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cont2 = cont2 - 1
NameError: name 'cont2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:44:57) 
-- CODE:
numero = int(input("digite numero: "))


cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1
print(perfeito)
if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:45:09) 
-- CODE:
numero = int(input("digite numero: "))


cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = numero // cont
	cont = cont - 1
print(perfeito)
if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:46:05) 
-- CODE:
numero = int(input("digite numero: "))


cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito += numero // cont
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    perfeito += numero // cont
NameError: name 'perfeito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:46:18) 
-- CODE:
numero = int(input("digite numero: "))


cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito += (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    perfeito += (numero // cont)
NameError: name 'perfeito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:46:53) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:47:18) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:47:31) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print(perfeito)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:48:30) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0 and cont < numero):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print(perfeito)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:48:50) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0 or cont < numero):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print(perfeito)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(numero % cont == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:49:49) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 0):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito - (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print(perfeito)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
-992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:42:35) 
-- CODE:
numero = int(input("digite numero: "))

cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(perfeito)
else:
	print(perfeito)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(numero == perfeito):
NameError: name 'perfeito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:43:05) 
-- CODE:
numero = int(input("digite numero: "))

cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print(cont)
else:
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(numero == perfeito):
NameError: name 'perfeito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:43:25) 
-- CODE:
numero = int(input("digite numero: "))

cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
	cont = cont - 1

if(numero == cont):
	print(cont)
else:
	print(cont)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:09) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == cont):
	print(perfeito)
else:
	print(perfeito)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:21) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == cont):
	print(perfeito)
else:
	print(perfeito)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:51) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:57) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:46:08) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:46:22) 
-- CODE:
numero = int(input("digite numero: "))

perfeito = 0
cont = numero

while(cont > 1):
	if(numero % cont == 0):
		print(numero // cont)
		perfeito = perfeito + (numero // cont)
	cont = cont - 1

if(numero == perfeito):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.263917
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
